style: fix height on mobile devices

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -3,7 +3,7 @@
 
 html,
 body {
-  width: 100vw;
+  width: 100%;
   overflow-x: hidden;
   scrollbar-color: var(--color-dark) transparent;
 }
