--- a/src/pages/home/ui/styles.module.scss
+++ b/src/pages/home/ui/styles.module.scss
@@ -1,7 +1,7 @@
 @use "@/shared/styles/functions" as *;
 
 .home {
-  min-height: calc(100vh - var(--header-height));
+  min-height: calc(100dvh - var(--header-height));
   display: flex;
   align-items: flex-end;
   padding-bottom: rem(50);
