--- a/src/pages/login/ui/styles.module.scss
+++ b/src/pages/login/ui/styles.module.scss
@@ -1,7 +1,7 @@
 @use "@/shared/styles/mixins" as *;
 
 .login {
-  min-height: calc(100vh - var(--header-height));
+  min-height: calc(100dvh - var(--header-height));
   display: flex;
   justify-content: center;
   padding-top: 20vh;
