--- a/src/pages/weather/ui/styles.module.scss
+++ b/src/pages/weather/ui/styles.module.scss
@@ -11,7 +11,7 @@
   }
 
   &Cities {
-    min-height: calc(100vh - #{rem(30)} * 2 - var(--header-height));
+    min-height: calc(100dvh - #{rem(30)} * 2 - var(--header-height));
     overflow-y: auto;
     scrollbar-width: thin;
     flex: 1;
